Adding client-side and server-side interactions. Also adds purpur/paper support